-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.14.0, Lustre 2.12.5
-
3
-
9223372036854775807
Running "lfs df -v" prints too many MDTs, as it shows all MDTs that might be configured in the lmv_tgts array, rather than skipping ones that are not present:
# lfs df -v UUID 1K-blocks Used Available Use% Mounted on testfs-MDT0000_UUID 125368 98940 15192 87% /mnt/testfs[MDT:0] testfs-MDT0001_UUID 125368 44420 69712 39% /mnt/testfs[MDT:1] MDT0002 : inactive device MDT0003 : inactive device : : MDT003e : inactive device MDT003f : inactive device testfs-OST0000_UUID 325368 14684 283524 5% /mnt/testfs[OST:0] testfs-OST0001_UUID 325368 14676 283532 5% /mnt/testfs[OST:1] testfs-OST0002_UUID 325368 16720 281488 6% /mnt/testfs[OST:2] testfs-OST0003_UUID 325368 14684 283524 5% /mnt/testfs[OST:3] filesystem_summary: 1301472 60764 1132068 6% /mnt/testfs