lustre/tests/sanity.sh
@@ -5624,16 +5624,24 @@ test_56c() {
 	local ost_idx=0
 	local ost_name=$(ostname_from_index $ost_idx)
 	local old_status=$(ost_dev_status $ost_idx)
+	local p="$TMP/$TESTSUITE-$TESTNAME.parameters"
 
 	[[ -z "$old_status" ]] ||
 		skip_env "OST $ost_name is in $old_status status"
 
 	do_facet ost1 $LCTL set_param -n obdfilter.$ost_name.degraded=1
-	[[ $OST1_VERSION -ge $(version_code 2.12.55) ]] && do_facet ost1 \
+	[[ $OST1_VERSION -lt $(version_code 2.12.55) ]] || do_facet ost1 \
 		$LCTL set_param -n obdfilter.$ost_name.no_precreate=1
+	if [[ $OST1_VERSION -ge $(version_code 2.12.57) ]]; then
+		save_lustre_params ost1 osd-*.$ost_name.nonrotational > $p
+		do_facet ost1 $LCTL set_param -n osd-*.$ost_name.nonrotational=1
+	fi
+
+	[[ $($LFS df -v $MOUNT |& grep -c "inactive device") -eq 0 ]] ||
+		error "$LFS df -v showing inactive devices"
 	sleep_maxage
 
-	local new_status=$(ost_dev_status $ost_idx)
+	local new_status=$(ost_dev_status $ost_idx $MOUNT -v)
 
 	[[ "$new_status" =~ "D" ]] ||
 		error "$ost_name status is '$new_status', missing 'D'"
@@ -5641,17 +5649,36 @@ test_56c() {
 		[[ "$new_status" =~ "N" ]] ||
 			error "$ost_name status is '$new_status', missing 'N'"
 	fi
+	if [[ $OST1_VERSION -ge $(version_code 2.12.57) ]]; then
+		[[ "$new_status" =~ "f" ]] ||
+			error "$ost_name status is '$new_status', missing 'f'"
+	fi
 
 	do_facet ost1 $LCTL set_param -n obdfilter.$ost_name.degraded=0
-	[[ $OST1_VERSION -ge $(version_code 2.12.55) ]] && do_facet ost1 \
+	[[ $OST1_VERSION -lt $(version_code 2.12.55) ]] || do_facet ost1 \
 		$LCTL set_param -n obdfilter.$ost_name.no_precreate=0
+	[[ -z "$p" ]] && restore_lustre_params < $p || true
 	sleep_maxage
 
 	new_status=$(ost_dev_status $ost_idx)
 	[[ ! "$new_status" =~ "D" && ! "$new_status" =~ "N" ]] ||
 		error "$ost_name status is '$new_status', has 'D' and/or 'N'"
+	# can't check 'f' as devices may actually be on flash
 }
 run_test 56c "check 'lfs df' showing device status"
+
+test_56d() {
+	local mdts=$($LFS df -v $MOUNT | grep -c MDT)
+	local osts=$($LFS df -v $MOUNT | grep -c OST)
+
+	$LFS df $MOUNT
+
+	(( mdts == MDSCOUNT )) ||
+		error "lfs df -v showed $mdts MDTs, not $MDSCOUNT"
+	(( osts == OSTCOUNT )) ||
+		error "lfs df -v showed $osts OSTs, not $OSTCOUNT"
+}
+run_test 56d "'lfs df -v' prints only configured devices"
 
 NUMFILES=3
 NUMDIRS=3
